--- a/Assignment_6_Bootstrap/index.html
+++ b/Assignment_6_Bootstrap/index.html
@@ -27,7 +27,7 @@
         <div class="container">
 
             <!-- A grey horizontal navbar that becomes vertical on small screens -->
-            <nav class="navbar navbar-expand-sm">
+            <nav class="navbar navbar-expand-sm navbar-expand-md navbar-expand-lg">
 
                 <!-- Brand/logo -->
                 <a class="navbar-brand" href="#">
@@ -37,6 +37,7 @@
                 <!----navbar toggle starts----->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span><i class="fas fa-bars menubar"></i></span>
+                    
                 </button>
                 <!----navbar toggle ends----->
 
@@ -80,7 +81,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center">
-                    <img src="images/iphone.png" alt="iphone" class="iphone" width="400px">
+                    <img src="images/iphone.png" alt="iphone" class="iphone">
 
                 </div>
 
@@ -339,7 +340,7 @@
 
 
     <!------------sec5 starts------->
-    <section class="text-center text-white sec5" style="background-image: url(images/call-to-action.png); height: 330px;">
+    <section class="text-center text-white sec5" style="background-image: url(images/call-to-action.png);">
         <div class="container">
 
             <p class="sec5_h1"><b>Increase your conversion rates now</b></p>
