--- a/Exam2_PSD_TO_BOOTSTRAP/index.html
+++ b/Exam2_PSD_TO_BOOTSTRAP/index.html
@@ -104,7 +104,7 @@
     <!----------BANNER AREA STARTS------------>
 
     <div class="banner_pinkarea">
-        <section class="banner_area d-flex align-items-center" style="background-image: url(images/Banner.png); ">
+        <section class="banner_area d-flex align-items-center" style="background-image: url(images/banner.png); ">
 
             <div class="container">
                 <div class="row">
