Exam_2(with jQuery)

--- a/Exam2_PSD_TO_BOOTSTRAP/index.html
+++ b/Exam2_PSD_TO_BOOTSTRAP/index.html
@@ -176,7 +176,7 @@
 
         <div class="container">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner wow zoomIn">
                     <div class="carousel-item active">
                         <div class="quote">
                             <img src="images/left%20comma.png" alt="leftcomma">
