--- a/Exam2_PSD_TO_BOOTSTRAP/index.html
+++ b/Exam2_PSD_TO_BOOTSTRAP/index.html
@@ -22,6 +22,11 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
+    
+    <!-----------Countdown links------------>
+    <link href="css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.2.1.slim.min.js"></script>
+    <script src="js/countdown-timer.js"></script>
 
     <title>Mache</title>
 
@@ -98,6 +103,45 @@
                             <h1 class="wow pulse"><b class="mache">Mache</b> FREE psd Template</h1>
                             <hr>
 
+                            <!--                     
+                            <div class="countdown-timer-wrapper wow zoomIn">
+                                <div class="timer" id="countdown">
+                                    <h5>Coming soon in..</h5>
+                                    <div class="timer-wrapper  wow bounceIn item_delay1">
+                                        <div class="time">01</div><span class="text">days</span>
+                                    </div>
+                                    <div class="timer-wrapper wow bounceIn item_delay2">
+                                        <div class="time">23</div><span class="text">hrs</span>
+                                    </div>
+                                    <div class="timer-wrapper wow bounceIn item_delay3">
+                                        <div class="time">59</div><span class="text">mins</span>
+                                    </div>
+                                    <div class="timer-wrapper wow bounceIn item_delay4">
+                                        <div class="time">15</div><span class="text">sec</span>
+                                    </div>
+                                </div>
+                            </div>
+                            -->
+                            <div class="countdown-timer-wrapper wow zoomIn">
+                                <div class="timer" id="countdown"></div>
+                            </div>
+                            <script>
+                                $(document).ready(function() {
+
+                                    var myDate = new Date();
+                                    myDate.setDate(myDate.getDate() + 2);
+                                    $("#countdown").countdown(myDate, function(event) {
+                                        $(this).html(
+                                            event.strftime(
+                                                '<h5>Coming soon in..</h5><div class="timer-wrapper"><div class="time">%D</div><span class="text">days</span></div><div class="timer-wrapper"><div class="time">%H</div><span class="text">hrs</span></div><div class="timer-wrapper"><div class="time">%M</div><span class="text">mins</span></div><div class="timer-wrapper"><div class="time">%S</div><span class="text">secs</span></div>'
+                                            )
+                                        );
+                                    });
+
+                                });
+
+                            </script>
+
                             <p class="wow fadeIn delay_small">Elegant and clean PSD template, which you can download and use for free!<br>You can easily modify the design to make it your own and help you get your project running faster.</p>
 
                             <button class="btn pinkbtn mt-4 wow pulse">Show More</button>
@@ -117,7 +161,7 @@
                 <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-xs-12">
                     <h1 class="wow bounceInLeft">Powerful PSD template<br>available for free!</h1>
                     <hr>
-                    <p  class="wow fadeIn delay_smaller">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in </p>
+                    <p class="wow fadeIn delay_smaller">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in </p>
                     <a href="#" class="wow bounceInLeft delay_small">see the video &nbsp; &nbsp; <i class="fas fa-caret-right"></i></a>
                 </div>
 
@@ -612,6 +656,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+    <script src="//code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="js/countdown-timer.js"></script>
+
 </body>
 
 </html>
